--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ytdl-gui",
   "productName": "ytdl-gui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Add to download youtube audio or video",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "author": {
     "name": "mienaiyami",
     "email": "mienaiyami0@gmail.com",
-    "url": "https://github.com/mienaiyami"
+    "url": "https://github.com/mienaiyami/ytdl-gui"
   },
   "license": "MIT",
   "devDependencies": {
@@ -57,13 +57,17 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
