--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,16 +59,18 @@ jobs:
 
       - name: Read files to upload
         id: readFilesToUpload
-        run: echo "files=$(cat filesToUpload.txt)" >> "$GITHUB_OUTPUT"; echo "${{ steps.readFilesToUpload.outputs.files }}"
+        run: echo "files=$(cat filesToUpload.txt)" >> "$GITHUB_OUTPUT"; echo "files=$(cat filesToUpload.txt)"
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
+        env:
+          FILES: ${{ steps.readFilesToUpload.outputs.files }}
         with:
           tag_name: ${{github.ref}}
           name: ${{github.ref_name}}
           # add generated file here to upload
-          files: "${{ steps.readFilesToUpload.outputs.files }}"
+          files: "$FILES"
           # files: |
           #   ./out/make/zip/win32/ia32/ytdl-gui-win32-ia32-${{ github.ref_name }}.zip
           body_path: changelog-temp.md 
