--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,11 @@ permissions:
   contents: write
   discussions: write
 
-on: workflow_dispatch
-# on: 
-#   push:
-#     tags:
-#       - "v*.*.*"
+# on: workflow_dispatch
+on: 
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs:
 
