--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,16 +61,19 @@ jobs:
         id: readFilesToUpload
         run: echo "files=$(cat filesToUpload.txt)" >> "$GITHUB_OUTPUT"; echo "files=$(cat filesToUpload.txt)"
 
+      - name: test
+        run: echo "${{ steps.readFilesToUpload.outputs.files }}"
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: ${{github.ref}}
           name: ${{github.ref_name}}
-          # add generated file here to upload
-          files: "${{ steps.readFilesToUpload.outputs.files }}"
-          # files: |
-          #   ./out/make/zip/win32/ia32/ytdl-gui-win32-ia32-${{ github.ref_name }}.zip
+          # doesnt work for some reason
+          # files: "${{ steps.readFilesToUpload.outputs.files }}"
+          files: |
+            ./out/all/ytdl-gui-${{ github.ref_name }}.zip
           body_path: changelog-temp.md 
           generate_release_notes: true
           # discussion_category_name: General
