--- a/package.json
+++ b/package.json
@@ -63,22 +63,22 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6"
-  },
-  "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@electron/remote": "^2.0.10",
     "@hookform/resolvers": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "sanitize-filename": "^1.6.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.6"
+  },
+  "dependencies": {
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "electron-squirrel-startup": "^1.0.0",
     "ytdl-core": "^4.11.5"
   }
 }
